New API Spec with required channel execte action
