# lib/Api/ChannelGroupsApi.php
@@ -583,7 +583,7 @@ class ChannelGroupsApi
      * Execute action on the channel group
      *
      * @param  int $id id (required)
-     * @param  \Swagger\Client\Model\ChannelGroupExecuteActionRequest $body Defines an action to execute on channel group. The &#x60;action&#x60; key is always required. The rest of the keys are params depending on the chosen action. Read more on [Github Wiki](https://github.com/SUPLA/supla-cloud/wiki/Channel-Actions). (required)
+     * @param  \Swagger\Client\Model\ChannelExecuteActionRequest $body Defines an action to execute on channel group. The &#x60;action&#x60; key is always required. The rest of the keys are params depending on the chosen action. Read more on [Github Wiki](https://github.com/SUPLA/supla-cloud/wiki/Channel-Actions). (required)
      *
      * @throws \Swagger\Client\ApiException on non-2xx response
      * @throws \InvalidArgumentException
@@ -600,7 +600,7 @@ class ChannelGroupsApi
      * Execute action on the channel group
      *
      * @param  int $id (required)
-     * @param  \Swagger\Client\Model\ChannelGroupExecuteActionRequest $body Defines an action to execute on channel group. The &#x60;action&#x60; key is always required. The rest of the keys are params depending on the chosen action. Read more on [Github Wiki](https://github.com/SUPLA/supla-cloud/wiki/Channel-Actions). (required)
+     * @param  \Swagger\Client\Model\ChannelExecuteActionRequest $body Defines an action to execute on channel group. The &#x60;action&#x60; key is always required. The rest of the keys are params depending on the chosen action. Read more on [Github Wiki](https://github.com/SUPLA/supla-cloud/wiki/Channel-Actions). (required)
      *
      * @throws \Swagger\Client\ApiException on non-2xx response
      * @throws \InvalidArgumentException
@@ -662,7 +662,7 @@ class ChannelGroupsApi
      * Execute action on the channel group
      *
      * @param  int $id (required)
-     * @param  \Swagger\Client\Model\ChannelGroupExecuteActionRequest $body Defines an action to execute on channel group. The &#x60;action&#x60; key is always required. The rest of the keys are params depending on the chosen action. Read more on [Github Wiki](https://github.com/SUPLA/supla-cloud/wiki/Channel-Actions). (required)
+     * @param  \Swagger\Client\Model\ChannelExecuteActionRequest $body Defines an action to execute on channel group. The &#x60;action&#x60; key is always required. The rest of the keys are params depending on the chosen action. Read more on [Github Wiki](https://github.com/SUPLA/supla-cloud/wiki/Channel-Actions). (required)
      *
      * @throws \InvalidArgumentException
      * @return \GuzzleHttp\Promise\PromiseInterface
@@ -683,7 +683,7 @@ class ChannelGroupsApi
      * Execute action on the channel group
      *
      * @param  int $id (required)
-     * @param  \Swagger\Client\Model\ChannelGroupExecuteActionRequest $body Defines an action to execute on channel group. The &#x60;action&#x60; key is always required. The rest of the keys are params depending on the chosen action. Read more on [Github Wiki](https://github.com/SUPLA/supla-cloud/wiki/Channel-Actions). (required)
+     * @param  \Swagger\Client\Model\ChannelExecuteActionRequest $body Defines an action to execute on channel group. The &#x60;action&#x60; key is always required. The rest of the keys are params depending on the chosen action. Read more on [Github Wiki](https://github.com/SUPLA/supla-cloud/wiki/Channel-Actions). (required)
      *
      * @throws \InvalidArgumentException
      * @return \GuzzleHttp\Promise\PromiseInterface
@@ -720,7 +720,7 @@ class ChannelGroupsApi
      * Create request for operation 'executeChannelGroupAction'
      *
      * @param  int $id (required)
-     * @param  \Swagger\Client\Model\ChannelGroupExecuteActionRequest $body Defines an action to execute on channel group. The &#x60;action&#x60; key is always required. The rest of the keys are params depending on the chosen action. Read more on [Github Wiki](https://github.com/SUPLA/supla-cloud/wiki/Channel-Actions). (required)
+     * @param  \Swagger\Client\Model\ChannelExecuteActionRequest $body Defines an action to execute on channel group. The &#x60;action&#x60; key is always required. The rest of the keys are params depending on the chosen action. Read more on [Github Wiki](https://github.com/SUPLA/supla-cloud/wiki/Channel-Actions). (required)
      *
      * @throws \InvalidArgumentException
      * @return \GuzzleHttp\Psr7\Request
